--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,9 @@
 # Miscellaneous
 *.log
 *.tmp
+
+# Ignore Gradle project-specific cache directory
+.gradle
+
+# Ignore Gradle build output directory
+build
